--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "clickaway"
   ],
   "author": "javierbyte",
+  "dependencies": {
+    "react-dom": ">= 0.14.0",
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/javierbyte/react-clickaway/issues"
