Fix typo in package.json

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "author": "javierbyte",
   "dependencies": {
-    "react-dom": ">= 0.14.0",
+    "react-dom": ">= 0.14.0"
   },
   "license": "ISC",
   "bugs": {
